--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -48,12 +48,10 @@
         <h4>Join the Pack</h4>
         <p>Come hang out, share art, and vibe with the community.</p>
         <div class="cta-group">
-          <!-- Replace with your real Discord invite -->
           <a class="btn" href="https://discord.gg/fGeJcDzVx7" target="_blank" rel="noopener">Join Discord</a>
           <a class="btn secondary" href="https://twitch.tv/WolfPastryVT" target="_blank" rel="noopener">Follow on Twitch</a>
         </div>
 
-        <!-- Optional Discord server widget (enable "Server Widget" in Discord settings and set your server ID) -->
         <div class="card" style="padding:0; margin-top:14px;">
           <iframe src="https://discord.com/widget?id=1179454143115563090&theme=dark" width="100%" height="350" allowtransparency="true" frameborder="0"></iframe>
         </div>
@@ -73,19 +71,48 @@
         <h4>Send Love To</h4>
         <p class="note">Creators, friends, and communities I appreciate — check them out!</p>
         <div class="grid gallery">
-          <!-- Duplicate figure blocks for each shout-out -->
-          <a class="card" href="https://twitch.tv/example1" target="_blank" rel="noopener" style="text-decoration:none;">
+          <a class="card" href="https://www.twitch.tv/umbrakit672" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/cover.png" alt="Creator 1" loading="lazy" onerror="this.style.display='none'">
-              <figcaption><strong>Creator 1</strong> — Cozy variety streamer</figcaption>
+              <img src="../../assets/cover.png" alt="Creator1" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>Umbrakit</strong> — A variety streamer</figcaption>
             </figure>
           </a>
-          <a class="card" href="https://bsky.app/profile/example" target="_blank" rel="noopener" style="text-decoration:none;">
+
+          <a class="card" href="https://www.twitch.tv/elddrasil" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/cover.png" alt="Artist 2" loading="lazy" onerror="this.style.display='none'">
-              <figcaption><strong>Artist 2</strong> — Emotes & panels</figcaption>
+              <img src="../../assets/cover.png" alt="Creator2" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>EldDrasil</strong> — A variety streamer</figcaption>
             </figure>
           </a>
+
+          <a class="card" href="https://www.twitch.tv/strifewasnthere" target="_blank" rel="noopener" style="text-decoration:none;">
+            <figure>
+              <img src="../../assets/cover.png" alt="Creator3" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>StrifeWasntHere</strong> — A variety streamer who likes fighting games</figcaption>
+            </figure>
+          </a>
+
+          <a class="card" href="https://www.twitch.tv/wickednopoint" target="_blank" rel="noopener" style="text-decoration:none;">
+            <figure>
+              <img src="../../assets/cover.png" alt="Creator4" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>WickedNoPoint</strong> — A variety streamer</figcaption>
+            </figure>
+          </a>
+
+          <figure>
+            <figcaption>More to come!</figcaption>
+          </figure>
+          
+          <a class="card" href="https://x.com/Bisuketto_arts" target="_blank" rel="noopener" style="text-decoration:none;">
+            <figure>
+              <img src="../../assets/cover.png" alt="Artist1" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>Bisuketto</strong> — Illustrations, Outfit Designs & Emotes</figcaption>
+            </figure>
+          </a>
+
+          <figure>
+              <figcaption>More to come!</figcaption>
+          </figure>
         </div>
       </section>
 
@@ -95,17 +122,17 @@
           <div class="card" style="padding:16px;">
             <h5 style="margin-top:0;">Twitch</h5>
             <ul>
-              <!-- Replace with real channels -->
-              <li><a href="https://twitch.tv/streamerA" target="_blank" rel="noopener">StreamerA</a> — Moderator</li>
-              <li><a href="https://twitch.tv/streamerB" target="_blank" rel="noopener">StreamerB</a> — Moderator</li>
+              <li><a href="https://twitch.tv/Clementines0" target="_blank" rel="noopener">Clementines0</a> — Moderator</li>
+              <li><a href="https://twitch.tv/QuixyIsKewl" target="_blank" rel="noopener">QuixyIsKewl</a> — Moderator</li>
+              <li><a href="https://twitch.tv/umbrakit672" target="_blank" rel="noopener">umbrakit672</a> — Moderator</li>
             </ul>
           </div>
           <div class="card" style="padding:16px;">
             <h5 style="margin-top:0;">Discord</h5>
             <ul>
-              <!-- Replace with real servers -->
-              <li><a href="https://discord.gg/invite1" target="_blank" rel="noopener">Server A</a> — Admin</li>
-              <li><a href="https://discord.gg/invite2" target="_blank" rel="noopener">Server B</a> — Moderator</li>
+              <li>Inku's server owned by Inku — Admin</li>
+              <li>The Eeveelution World and partners owned by AlinaTheDragon — Moderator/Admin</li>
+              <li>Axia Mundi owned by EldDrasil — Moderator</li>
             </ul>
             <p class="note" style="margin-top:8px;">Want your server listed? DM me with your role & invite link.</p>
           </div>
