--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -37,6 +37,7 @@
       <a href="/stream/">Overview</a>
       <a href="/stream/community/">Community</a>
       <a href="/stream/model/">Who is Luna?</a>
+      <a href="/stream/artfight/">Do you partake in ArtFight?</a>
       <!-- Add more later, e.g.: <a href="/stream/clips/">Clips</a> -->
     </aside>
 
@@ -98,10 +99,6 @@
               <figcaption><strong>WickedNoPoint</strong> — A variety streamer</figcaption>
             </figure>
           </a>
-
-          <figure>
-            <figcaption>More to come!</figcaption>
-          </figure>
           
           <a class="card" href="https://x.com/Bisuketto_arts" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
