--- a/stream/model/index.html
+++ b/stream/model/index.html
@@ -37,6 +37,7 @@
       <a href="/stream/">Overview</a>
       <a href="/stream/community/">Community</a>
       <a href="/stream/model/">Who is Luna?</a>
+      <a href="/stream/artfight/">Do you partake in ArtFight?</a>
       <!-- Add more later, e.g.: <a href="/stream/clips/">Clips</a> -->
     </aside>
 
