Add link to ArtFight in stream overview

--- a/stream/index.html
+++ b/stream/index.html
@@ -37,6 +37,7 @@
       <a href="/stream/">Overview</a>
       <a href="/stream/community/">Community</a>
       <a href="/stream/model/">Who is Luna?</a>
+      <a href="/stream/artfight/">Do you partake in ArtFight?</a>
     </aside>
   
   <div>
