--- a/stream/index.html
+++ b/stream/index.html
@@ -73,7 +73,14 @@
             <figcaption><strong>Community</strong> — Discord, shout-outs, and where I mod</figcaption>
           </figure>
          </a>
-           </div>
+
+          <a class="card" href="/stream/artfight/" style="display:block; padding:0; text-decoration:none;">
+           <figure>
+            <img src="/assets/cover.png" alt="ArtFight" loading="lazy" onerror="this.style.display='none'">
+            <figcaption><strong>Do you partake in ArtFight?</strong> — ArtFight Profile, Attacks, Defenses, and what it is</figcaption>
+          </figure>
+         </a>
+        </div>
        </div>
       </div>
      </div>
