--- a/commissions/illustrations/index.html
+++ b/commissions/illustrations/index.html
@@ -59,7 +59,7 @@
       <div class="grid gallery">
         <figure class="card">
           <img src="../../assets/BU1.gif" alt="Bust Up example 1 with PNGTuber add-on" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Emote commission for <a href="https://www.youtube.com/@VirtuallyFoxed/">VirtuallyFoxed</a></figcaption>
+          <figcaption>Bust Up commission with PNGTuber add-on for <a href="https://www.youtube.com/@VirtuallyFoxed/">VirtuallyFoxed</a></figcaption>
         </figure>
       </div>
 
@@ -81,15 +81,15 @@
       <div class="grid gallery">
         <figure class="card">
           <img src="../../assets/MLB1.png" alt="YCH Mascot Long Boi example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Emote commission for <a href="https://x.com/Felgrand_TV">FelgrandTheDragon</a></figcaption>
+          <figcaption>YCH Mascot Long Boi commission for <a href="https://x.com/Felgrand_TV">FelgrandTheDragon</a></figcaption>
         </figure>
         <figure class="card">
           <img src="../../assets/MLB2.png" alt="YCH Mascot Long Boi example 2" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Emote commission for <a href="https://x.com/splattermau5">Splattermau5</a></figcaption>
+          <figcaption>YCH Mascot Long Boi commission for <a href="https://x.com/splattermau5">Splattermau5</a></figcaption>
         </figure>
         <figure class="card">
           <img src="../../assets/MLB3.png" alt="YCH Mascot Long Boi example 3" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Emote commission for Mixy</figcaption>
+          <figcaption>YCH Mascot Long Boi commission for Mixy</figcaption>
         </figure>
       </div>
 
