--- a/commissions/miscellaneous/index.html
+++ b/commissions/miscellaneous/index.html
@@ -64,17 +64,17 @@
 
         <figure class="card">
           <img src="../../assets/MC2.png" alt="Minecraft Java Skin example 2" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Minecraft Java Skin commission <a href="https://x.com/Felgrand_TV">FelgrandTheDragon</a></figcaption>
+          <figcaption>Minecraft Java Skin commission for Noah</a></figcaption>
         </figure>
 
         <figure class="card">
           <img src="../../assets/MC3.png" alt="Minecraft Java Skin example 3" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Minecraft Java Skin commission <a href="https://bsky.app/profile/soraorionokami.bsky.social">Sora Orion Okami</a></figcaption>
+          <figcaption>Minecraft Java Skin commission for<a href="https://bsky.app/profile/soraorionokami.bsky.social">Sora Orion Okami</a></figcaption>
         </figure>
 
         <figure class="card">
           <img src="../../assets/MC4.png" alt="Minecraft Java Skin example 4" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Minecraft Java Skin commission <a href="https://bsky.app/profile/elddrasil.bsky.social">Eld Drasil</a></figcaption>
+          <figcaption>Minecraft Java Skin commission for <a href="https://bsky.app/profile/elddrasil.bsky.social">Eld Drasil</a></figcaption>
         </figure>
       </div>
         
