Add link to other servers section in index.html

--- a/stream/index.html
+++ b/stream/index.html
@@ -38,6 +38,7 @@
       <a href="/stream/community/">Community</a>
       <a href="/stream/model/">Who is Luna?</a>
       <a href="/stream/artfight/">Do you partake in ArtFight?</a>
+      <a href="/stream/server/">I heard you own other servers!</a>
     </aside>
   
   <div>
@@ -78,6 +79,13 @@
            <figure>
             <img src="/assets/cover.png" alt="ArtFight" loading="lazy" onerror="this.style.display='none'">
             <figcaption><strong>Do you partake in ArtFight?</strong> — ArtFight Profile, Attacks, Defenses, and what it is</figcaption>
+          </figure>
+         </a>
+
+          <a class="card" href="/stream/server/" style="display:block; padding:0; text-decoration:none;">
+           <figure>
+            <img src="/assets/cover.png" alt="Other Discord Servers" loading="lazy" onerror="this.style.display='none'">
+            <figcaption><strong>I heard you own other servers!</strong> — Total amount made/owned, Invite links available, etc.</figcaption>
           </figure>
          </a>
         </div>
