--- a/stream/artfight/index.html
+++ b/stream/artfight/index.html
@@ -38,6 +38,7 @@
       <a href="/stream/community/">Community</a>
       <a href="/stream/model/">Who is Luna?</a>
       <a href="/stream/artfight/">Do you partake in ArtFight?</a>
+      a href="/stream/server/">I heard you own other servers!</a>
       <!-- Add more later, e.g.: <a href="/stream/clips/">Clips</a> -->
     </aside>
 
