--- a/merch/index.html
+++ b/merch/index.html
@@ -78,17 +78,18 @@
     <!-- Product card -->
     <article class="card">
       <figure>
-        <img src="/assets/cover.png" alt="Wolf Hoodie (Blue)" loading="lazy">
-        <figcaption><strong>Wolf Hoodie — Blue</strong><br><small>Unisex S–XXL</small></figcaption>
+        <img src="/assets/cover.png" alt="Hoodie" loading="lazy">
+        <figcaption><strong>Hoodie — Blue, Black, or Gradiant</strong><br><small>Unisex S–XXL</small></figcaption>
       </figure>
       <div class="cta-group" style="padding:12px;">
+        <button class="btn" disabled>Coming soon</button>
         <!-- Example: Stripe Payment Link -->
-        <a class="btn" href="https://ko-fi.com/wolfpastryvt"
+        <!--<a class="btn" href="https://ko-fi.com/wolfpastryvt"
            target="_blank" rel="noopener">Buy now</a>
         <a class="btn secondary" href="https://ko-fi.com/wolfpastryvt"
-           target="_blank" rel="noopener">View on Ko-fi</a>
+           target="_blank" rel="noopener">View on Ko-fi</a>-->
       </div>
-      <p class="note" style="padding:0 12px 12px;">Printed on demand. Ships in ~7–10 business days.</p>
+      <!--<p class="note" style="padding:0 12px 12px;">Printed on demand. Ships in ~7–10 business days.</p>-->
     </article>
 
     <article class="card">
@@ -102,6 +103,16 @@
       </div>
     </article>
 
+    <article class="card">
+      <figure>
+        <img src="/assets/cover.png" alt="Pins" loading="lazy">
+        <figcaption><strong>Pins</strong><br><small>Bag Pins • 2 designs</small></figcaption>
+      </figure>
+      <div class="cta-group" style="padding:12px;">
+        <button class="btn" disabled>Coming soon</button>
+        <a class="btn secondary" href="/merch/" aria-disabled="true">Details</a>
+      </div>
+    </article>
   </div>
 </section>
 </main>
