Disable 'Details' link for merch items
Comment out the 'Details' link for merch items.

--- a/merch/index.html
+++ b/merch/index.html
@@ -99,7 +99,7 @@
       </figure>
       <div class="cta-group" style="padding:12px;">
         <button class="btn" disabled>Coming soon</button>
-        <a class="btn secondary" href="/merch/" aria-disabled="true">Details</a>
+        <!--<a class="btn secondary" href="/merch/" aria-disabled="true">Details</a>-->
       </div>
     </article>
 
@@ -110,7 +110,7 @@
       </figure>
       <div class="cta-group" style="padding:12px;">
         <button class="btn" disabled>Coming soon</button>
-        <a class="btn secondary" href="/merch/" aria-disabled="true">Details</a>
+        <!--<a class="btn secondary" href="/merch/" aria-disabled="true">Details</a>-->
       </div>
     </article>
   </div>
