Update figcaption for YCH Emote commission

--- a/commissions/emotes/index.html
+++ b/commissions/emotes/index.html
@@ -72,7 +72,7 @@
       <div class="grid gallery">
         <figure class="card">
           <img src="../../assets/YCH1.gif" alt="Emote example 1" loading="lazy" onerror="this.style.display='none'">
-          <figcaption>Emote commission for <a href="https://x.com/ValidantesVT">ValidantesVT</a></figcaption>
+          <figcaption>YCH Bongo Emote commission for <a href="https://x.com/ValidantesVT">ValidantesVT</a></figcaption>
         </figure>
       </div>
 
