Enhance nav toggle button accessibility
Added aria-expanded attribute to nav toggle button for accessibility.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="tagline">Art ✦ Streaming ✦ Commissions</p>
     </div>
     <nav class="nav" id="nav">
-      <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
+      <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false" onclick="toggleNav()">☰</button>
        <ul class="nav-list">
         <li><a href="/">Home</a></li>
         <li><a href="/art/">Art</a></li>
