Refactor navigation menu with aria-expanded attribute

--- a/about/index.html
+++ b/about/index.html
@@ -15,18 +15,18 @@
     <h1>WolfPastry Studio</h1>
     <p class="tagline">Art ✦ Streaming ✦ Commissions</p>
   </div>
-  <nav class="nav" id="nav">
-    <button class="nav-toggle" aria-label="Toggle menu" onclick="toggleNav()">☰</button>
-    <ul class="nav-list">
-      <li><a href="/">Home</a></li>
-      <li><a href="/art/">Art</a></li>
-      <li><a href="/commissions/">Commissions</a></li>
-      <li><a href="/stream/">Stream</a></li>
-      <li><a href="/merch/">Merch</a></li>
-      <li><a href="/about/">About</a></li>
-      <li><a href="/contact/">Contact</a></li>
-    </ul>
-  </nav>
+ <nav class="nav" id="nav">
+      <button class="nav-toggle" aria-label="Toggle menu" aria-expanded="false" onclick="toggleNav()">☰</button>
+       <ul class="nav-list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/art/">Art</a></li>
+        <li><a href="/commissions/">Commissions</a></li>
+        <li><a href="/stream/">Stream</a></li>
+        <li><a href="/merch/">Merch</a></li>
+        <li><a href="/about/">About</a></li>
+        <li><a href="/contact/">Contact</a></li>
+      </ul>
+    </nav>
 </header>
 
 <main>
