--- a/art/index.html
+++ b/art/index.html
@@ -58,7 +58,7 @@
     </a>
     <a class="card" href="/art/miscellaneous/" style="text-decoration:none;">
       <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
-      <figcaption><strong>Other Services</strong> — MC Skins, Discord Servers, etc.</figcaption></figure>
+      <figcaption><strong>Other Services</strong> — YCH, Outfits Skebs, etc.</figcaption></figure>
     </a>
     <a class="card" href="/art/fanart/" style="text-decoration:none;">
       <figure><img src="../assets/cover.png" alt="" loading="lazy" onerror="this.style.display='none'">
