--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -89,14 +89,14 @@
 
           <a class="card" href="https://www.twitch.tv/strifewasnthere" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/strifeRef.png" alt="Creator3" loading="lazy" onerror="this.style.display='none'">
+              <img src="../../assets/strifeRef.PNG" alt="Creator3" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>StrifeWasntHere</strong> — A variety streamer who likes fighting games</figcaption>
             </figure>
           </a>
 
           <a class="card" href="https://www.twitch.tv/wickednopoint" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/wickedRef.png" alt="Creator4" loading="lazy" onerror="this.style.display='none'">
+              <img src="../../assets/wickedRef.PNG" alt="Creator4" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>WickedNoPoint</strong> — A variety streamer</figcaption>
             </figure>
           </a>
