--- a/stream/index.html
+++ b/stream/index.html
@@ -84,7 +84,7 @@
 
           <a class="card" href="/stream/server/" style="display:block; padding:0; text-decoration:none;">
            <figure>
-            <img src="/assets/cover.png" alt="Other Discord Servers" loading="lazy" onerror="this.style.display='none'">
+            <img src="/assets/server7.jpg" alt="Other Discord Servers" loading="lazy" onerror="this.style.display='none'">
             <figcaption><strong>I heard you own other servers!</strong> — Total amount made/owned, Invite links available, etc.</figcaption>
           </figure>
          </a>
