Update image sources for community creators

--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -75,14 +75,14 @@
         <div class="grid gallery">
           <a class="card" href="https://www.twitch.tv/umbrakit672" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/cover.png" alt="Creator1" loading="lazy" onerror="this.style.display='none'">
+              <img src="../../assets/umbraRef.PNG" alt="Creator1" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>Umbrakit</strong> — A variety streamer</figcaption>
             </figure>
           </a>
 
           <a class="card" href="https://www.twitch.tv/elddrasil" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/cover.png" alt="Creator2" loading="lazy" onerror="this.style.display='none'">
+              <img src="../../assets/eldRef.PNG" alt="Creator2" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>EldDrasil</strong> — A variety streamer</figcaption>
             </figure>
           </a>
@@ -103,7 +103,7 @@
           
           <a class="card" href="https://x.com/Bisuketto_arts" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/cover.png" alt="Artist1" loading="lazy" onerror="this.style.display='none'">
+              <img src="../../assets/bisuRef.PNG" alt="Artist1" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>Bisuketto</strong> — Illustrations, Outfit Designs & Emotes</figcaption>
             </figure>
           </a>
