--- a/stream/community/index.html
+++ b/stream/community/index.html
@@ -100,10 +100,17 @@
               <figcaption><strong>WickedNoPoint</strong> — A variety streamer</figcaption>
             </figure>
           </a>
+
+          <a class="card" href="https://www.twitch.tv/isolura" target="_blank" rel="noopener" style="text-decoration:none;">
+            <figure>
+              <img src="../../assets/isoRef.png" alt="Creator5 and Artist1" loading="lazy" onerror="this.style.display='none'">
+              <figcaption><strong>IsoLura</strong> — A variety streamer | Illustrations & Emotes</figcaption>
+            </figure>
+          </a>
           
           <a class="card" href="https://x.com/Bisuketto_arts" target="_blank" rel="noopener" style="text-decoration:none;">
             <figure>
-              <img src="../../assets/bisuRef.png" alt="Artist1" loading="lazy" onerror="this.style.display='none'">
+              <img src="../../assets/bisuRef.png" alt="Artist2" loading="lazy" onerror="this.style.display='none'">
               <figcaption><strong>Bisuketto</strong> — Illustrations, Outfit Designs & Emotes</figcaption>
             </figure>
           </a>
